...
                if let weatherModel = weatherViewModel.weatherModel {
                    WeatherDetailsView(weatherModel: weatherModel)
                        .padding()
                }
                Spacer() // Pushes content to the top, leaving space at the bottom.
            }
            .navigationTitle("Search by City, State & Country Code") // Sets the navigation title.
            .navigationBarTitleDisplayMode(.inline) // Displays the title inline.
            .padding() // Adds padding around the entire VStack.
            
            /// Handles an error during the API call by displaying an alert.
            .alert("Error message", isPresented: $weatherViewModel.hasCallAPiError) {
                Button("Retry", role: .cancel) {
...
