...
                    if let weatherModel = weatherViewModel.weatherModel {
                        WeatherDetailsView(weatherModel: weatherModel)
                            .padding()
                    }
                }
                .padding() // Adds padding around the entire VStack.
                .navigationTitle("Search by City and Country Code") // Sets the navigation title.
                .navigationBarTitleDisplayMode(.inline) // Displays the title inline.
                .padding() // Adds extra padding around the content.
                
                /// Handles an error during the API call by displaying an alert.
                .alert("Error fetching data. Try again later.", isPresented: $weatherViewModel.hasCallAPiError) {
                    Button("Retry", role: .cancel) {
...
